@@ -182,7 +182,12 @@ APR_DECLARE(apr_status_t) apr_file_mktemp(apr_file_t **fp, char *template, apr_i
     return gettemp(template, fp, flags, p);
 #else
 
+#ifdef HAVE_MKSTEMP64
+    fd = mkstemp64(template);
+#else
     fd = mkstemp(template);
+#endif
+    
     if (fd == -1) {
         return errno;
     }
