@@ -42,4 +42,4 @@ testlockperf
 testmutexscope
 testshmconsumer
 testshmproducer
-
+lfstests
